--- a/index2.html
+++ b/index2.html
@@ -8,5 +8,5 @@
 <body>
     
 </body>
-<script src="https://cdn.jsdelivr.net/gh/noumanshoukatkethwal/git@main/script.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/noumanshoukatkethwal/git@main/script.js?v=1.0.1"></script>
 </html>
