--- a/index2.html
+++ b/index2.html
@@ -8,5 +8,6 @@
 <body>
     
 </body>
-<script src="https://cdn.jsdelivr.net/gh/noumanshoukatkethwal/git/test-app/script.1.0.0v.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/noumanshoukatkethwal/git/test-app/script.1.0.0v.js?v=2.0.0"></script>
+
 </html>
